# dofbot

./: .gitignore  Readme.md
dofbot/: CMakeLists.txt  package.xml
dofbot_bringup/: CMakeLists.txt  package.xml
dofbot_bringup/config/: arm_controller.yaml  effort_controller.yaml  joints.yaml  position_controller.yaml
dofbot_bringup/launch/: arm_controllers.launch  dofbot_arm_pos_ctrl.launch  dofbot_fake.launch  effort_controller.launch  position_controller.launch  spawn.launch
dofbot_bringup/launch/includes/: description.launch.xml
dofbot_bringup/rviz/: dofbot_basic_config.rviz
dofbot_description/: CMakeLists.txt  package.xml
dofbot_description/rviz/: rviz_basic_settings.rviz  rviz_test_settings.rviz
dofbot_description/urdf/: dofbot_arm_ctrl.urdf
dofbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dofbot_moveit/config/: dofbot_arm.srdf  fake_controllers.yaml
dofbot_moveit/launch/: gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
