<?xml version="1.0"?>
<package format="2">
  <name>dofbot</name>
  <version>0.1.1</version>
  <description>ROS Noetic Package for Yahboom Dofbot</description>
  <license>Apache 2.0</license>
  <!-- <url type="website">TODO: Add project website url</url> -->
  <url type="repository">https://github.com/arrg-mx/dofbot</url>
  <url type="bugtracker">https://github.com/arrg-mx/dofbot/issues</url>

  <author>Felipe Rivas</author>
  <maintainer email="rivascf@gmail.com">frivas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO: Add each Dofot package when be need it-->
  <!-- exec_depend>dofbot_interfaces</exec_depend -->
  <!-- exec_depend>dofbot_config</exec_depend -->
  <exec_depend>dofbot_description</exec_depend>
  <exec_depend>dofbot_bringup</exec_depend>

  <export><metapackage/></export>
</package>
